--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                   <div class="aarticle article-container">
                     <article>
                       <img
-                        src=".html.png"
+                        src="./html.png"
                         alt="Experience icon"
                         class="icon"
                       />
