--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                   <div class="aarticle article-container">
                     <article>
                       <img
-                        src="./html.png"
+                        src="https://e7.pngegg.com/pngimages/780/934/png-clipart-html-logo-html5-logo-icons-logos-emojis-tech-companies.png"
                         alt="Experience icon"
                         class="icon"
                       />
