--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                   <div class="aarticle article-container">
                     <article>
                       <img
-                        src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/800px-HTML5_Badge.svg.png" 
+                        src="./assets/checkmark.png" 
                         alt="Experience icon"
                         class="icon"
                       />
